Changed file didn't get committed

--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ if host_machine.system() == 'windows'
   hidapi_sources += 'windows/hid.c'
   cc = meson.get_compiler('c')
   hidapi_deps = cc.find_library('setupapi', required : true)
-  hidapi_link_args += '--no-undefined'
+  hidapi_link_args += '-Wall'
 elif host_machine.system() == 'linux'
   hidapi_sources += 'libusb/hid.c'
   hidapi_deps = [
