--- a/meson.build
+++ b/meson.build
@@ -7,9 +7,17 @@ hidapi_sources = [
 ]
 hidapi_link_args = []
 if host_machine.system() == 'windows'
-  hidapi_sources += 'windows/hid.c'
+  hidapi_sources += 'libusb/hid.c'
   cc = meson.get_compiler('c')
-  hidapi_deps = cc.find_library('setupapi', required : true)
+
+  libusbdll = cc.find_library('libusb-1.0', dirs : [join_paths(meson.current_source_dir(),'libusbdll')])
+  libusbdll_inc = include_directories('libusbdll')
+
+  hidapi_deps = [
+    libusbdll,
+    dependency('threads')
+  ]
+  hidapi_deps += cc.find_library('setupapi', required : true)
   hidapi_link_args += '-Wall'
 elif host_machine.system() == 'linux'
   hidapi_sources += 'libusb/hid.c'
